common/third_party/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/explain_diagnostics_ts_library_test.golden
Tsetse Checker set up with confidence threshold: HIGH_CONFIDENCE_EXTENDS

Processing file: google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts
Evaluating rule: ban-style-content-assignments for `div.innerText` Ln29,Col1
∟∟inspectedType: HTMLDivElement ; bannedType: HTMLStyleElement
∟∟typeMatch result: LEGACY_NO_MATCH
Evaluating rule: ban-script-content-assignments for `div.innerText` Ln29,Col1
∟∟inspectedType: HTMLDivElement ; bannedType: HTMLScriptElement
∟∟typeMatch result: UNRELATED
Evaluating rule: ban-element-innerhtml-assignments for `div.innerHTML` Ln32,Col1
∟∟inspectedType: HTMLDivElement ; bannedType: Element
∟∟typeMatch result: EXTENDS
Evaluating rule: ban-element-innerhtml-assignments for `div.innerHTML` Ln32,Col1
∟∟inspectedType: HTMLDivElement ; bannedType: ShadowRoot
∟∟typeMatch result: UNRELATED
Evaluating rule: ban-element-innerhtml-assignments for `(div as HTMLElement).innerHTML` Ln36,Col1
∟∟inspectedType: HTMLElement ; bannedType: Element
∟∟typeMatch result: EXTENDS
Evaluating rule: ban-element-innerhtml-assignments for `(div as HTMLElement).innerHTML` Ln36,Col1
∟∟inspectedType: HTMLElement ; bannedType: ShadowRoot
∟∟typeMatch result: UNRELATED
Evaluating rule: ban-element-innerhtml-assignments for `(div as HTMLElement | Foo).innerHTML` Ln40,Col1
∟∟inspectedType: any ; bannedType: Element
∟∟typeMatch result: ANY_UNKNOWN
Evaluating rule: ban-element-innerhtml-assignments for `(div as HTMLElement | Foo).innerHTML` Ln40,Col1
∟∟inspectedType: any ; bannedType: ShadowRoot
∟∟typeMatch result: ANY_UNKNOWN
Evaluating rule: ban-element-innerhtml-assignments for `(div as any).innerHTML` Ln46,Col1
∟∟inspectedType: any ; bannedType: Element
∟∟typeMatch result: ANY_UNKNOWN
Evaluating rule: ban-element-innerhtml-assignments for `(div as any).innerHTML` Ln46,Col1
∟∟inspectedType: any ; bannedType: ShadowRoot
∟∟typeMatch result: ANY_UNKNOWN
Evaluating rule: ban-embed-src-assignments for `(div as any as Foo).src` Ln52,Col1
∟∟inspectedType: Foo ; bannedType: HTMLEmbedElement
∟∟typeMatch result: LEGACY_NO_MATCH
Evaluating rule: ban-iframe-src-assignments for `(div as any as Foo).src` Ln52,Col1
∟∟inspectedType: Foo ; bannedType: HTMLIFrameElement
∟∟typeMatch result: LEGACY_NO_MATCH
Evaluating rule: ban-iframe-src-assignments for `(div as any as Foo).src` Ln52,Col1
∟∟inspectedType: Foo ; bannedType: HTMLFrameElement
∟∟typeMatch result: LEGACY_NO_MATCH
Evaluating rule: ban-script-src-assignments for `(div as any as Foo).src` Ln52,Col1
∟∟inspectedType: Foo ; bannedType: HTMLScriptElement
∟∟typeMatch result: ANY_UNKNOWN

2 failures, 8 silenced failures
failures:
∟∟Failure (confidence: HIGH_CONFIDENCE_EXTENDS): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:739:762 : ban-element-innerhtml-assignments
∟∟Failure (confidence: HIGH_CONFIDENCE_EXTENDS): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:849:889 : ban-element-innerhtml-assignments

silenced failures:
∟∟Silenced failure (confidence: LOW_CONFIDENCE, reasons: CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:655:678 : ban-script-content-assignments
∟∟Silenced failure (confidence: MEDIUM_CONFIDENCE, reasons: CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:986:1032 : ban-element-innerhtml-assignments
∟∟Silenced failure (confidence: MEDIUM_CONFIDENCE, reasons: DUPLICATE_MESSAGE, CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:986:1032 : ban-element-innerhtml-assignments
∟∟Silenced failure (confidence: MEDIUM_CONFIDENCE, reasons: CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:1244:1276 : ban-element-innerhtml-assignments
∟∟Silenced failure (confidence: MEDIUM_CONFIDENCE, reasons: DUPLICATE_MESSAGE, CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:1244:1276 : ban-element-innerhtml-assignments
∟∟Silenced failure (confidence: MEDIUM_CONFIDENCE, reasons: CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:1519:1552 : ban-script-src-assignments
∟∟Silenced failure (confidence: LOW_CONFIDENCE, reasons: LESS_CONFIDENT_DUPLICATE, DUPLICATE_MESSAGE, CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:739:762 : ban-element-innerhtml-assignments
∟∟Silenced failure (confidence: LOW_CONFIDENCE, reasons: LESS_CONFIDENT_DUPLICATE, DUPLICATE_MESSAGE, CONFIDENCE_TOO_LOW): google3/third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:849:889 : ban-element-innerhtml-assignments
------------------------------------
third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:32:1 - error TS21228: [tsetse] [ban-element-innerhtml-assignments] Assigning directly to Element#innerHTML can result in XSS vulnerabilities. If the assigned value does not contain HTML, assign it to the DOM element's textContent property. Otherwise, please either use a safe template system (go/templatesystems), or create a SafeHtml value by sanitizing the HTML and set the element's innerHTML property by using the DOM element's setInnerHtml setter exported in 'safevalues/dom'. See go/ts-dom-sink#safehtml for more details. Please use go/tsconformance-yaqs if you have further questions. Suggested fix:
- Replace the full match with: div.textContent = 'hello'

32 div.innerHTML = 'hello';
   ~~~~~~~~~~~~~~~~~~~~~~~
third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:36:1 - error TS21228: [tsetse] [ban-element-innerhtml-assignments] Assigning directly to Element#innerHTML can result in XSS vulnerabilities. If the assigned value does not contain HTML, assign it to the DOM element's textContent property. Otherwise, please either use a safe template system (go/templatesystems), or create a SafeHtml value by sanitizing the HTML and set the element's innerHTML property by using the DOM element's setInnerHtml setter exported in 'safevalues/dom'. See go/ts-dom-sink#safehtml for more details. Please use go/tsconformance-yaqs if you have further questions. Suggested fix:
- Replace the full match with: (div as HTMLElement).textContent = 'hello'

36 (div as HTMLElement).innerHTML = 'hello';
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:40:23 - error TS2304: Cannot find name 'Foo'.

40 (div as HTMLElement | Foo).innerHTML = 'hello';
                         ~~~
third_party/bazel_rules/rules_typescript/internal/tsetse/util/explain_diagnostics_test/ts_library_with_diagnostics/file.ts:52:16 - error TS2304: Cannot find name 'Foo'.

52 (div as any as Foo).src = 'hello';
                  ~~~

